[gd_scene load_steps=22 format=3 uid="uid://daojgctog6u62"]

[ext_resource type="Script" path="res://screens/GameScreen/GameScreen.gd" id="1_vg487"]
[ext_resource type="PackedScene" uid="uid://bbj50y32yt5kx" path="res://objects/Package/Package.tscn" id="2_7qsdc"]
[ext_resource type="Texture2D" uid="uid://cg3duaj12mfrb" path="res://objects/Background/Sky.png" id="2_8vcyq"]
[ext_resource type="PackedScene" uid="uid://bi3cs2js484dj" path="res://objects/Motorcycle/Motorcycle2.tscn" id="3_ajmp3"]
[ext_resource type="Texture2D" uid="uid://5cf35w0vv7xh" path="res://objects/Background/Cloud.png" id="3_be1xc"]
[ext_resource type="Script" path="res://screens/GameScreen/ScrollingLayer.gd" id="3_csfh4"]
[ext_resource type="Texture2D" uid="uid://s8bmwlbqvj1q" path="res://objects/Background/BackgroundHouse.png" id="3_emba5"]
[ext_resource type="Script" path="res://common/ScrollingSprite/ScrollingSprite.gd" id="4_xg6l0"]
[ext_resource type="Texture2D" uid="uid://du5kwdtnwkbrx" path="res://objects/Background/Cloud2.png" id="5_8jl78"]
[ext_resource type="Texture2D" uid="uid://cvymjnm7wmiq4" path="res://objects/Background/Bump.png" id="5_ht5qw"]
[ext_resource type="Texture2D" uid="uid://b1n4qpjlqb7kr" path="res://objects/Background/Ground.png" id="6_pvii6"]
[ext_resource type="Script" path="res://common/RepeatingSprite/RepeatingSprite.gd" id="7_vagn7"]
[ext_resource type="Script" path="res://addons/sxgd/nodes/fx/screen-effects/SxFxBetterBlur/SxFxBetterBlur.gd" id="9_bc8i0"]
[ext_resource type="FontFile" uid="uid://b3w673kt7hxqg" path="res://thirdparty/fonts/VTF MisterPixel/Mister Pixel Regular.otf" id="11_sk7p1"]
[ext_resource type="PackedScene" uid="uid://dh7w26l3ail7o" path="res://screens/GameScreen/TouchInput.tscn" id="12_b6jce"]
[ext_resource type="PackedScene" uid="uid://dd64plh8nk4up" path="res://objects/Terrain/TerrainBuilder.tscn" id="12_whpfi"]
[ext_resource type="PackedScene" uid="uid://bg3hbjhmgh3xr" path="res://objects/Client/Client.tscn" id="12_y4lmv"]
[ext_resource type="AudioStream" uid="uid://ddhjv47iye0cs" path="res://screens/GameScreen/Boo.ogg" id="13_1g77s"]
[ext_resource type="Script" path="res://addons/sxgd/modules/SxFontAwesome/SxFaButton.gd" id="15_gd05k"]
[ext_resource type="PackedScene" uid="uid://vogria3hq12s" path="res://screens/GameScreen/Minimap.tscn" id="17_wkok8"]

[sub_resource type="FontVariation" id="FontVariation_aqm42"]
base_font = ExtResource("11_sk7p1")

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vg487")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite2D" parent="BackgroundLayer"]
texture = ExtResource("2_8vcyq")
centered = false
metadata/_edit_lock_ = true

[node name="Scrolling" type="Node2D" parent="BackgroundLayer"]
script = ExtResource("3_csfh4")

[node name="House1" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(120, 368)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_emba5")
script = ExtResource("4_xg6l0")
move_speed = -5.0

[node name="Bump1" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(239, 408)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_ht5qw")
script = ExtResource("4_xg6l0")
move_speed = -8.0

[node name="House2" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(444, 443)
scale = Vector2(0.17, 0.17)
texture = ExtResource("3_emba5")
script = ExtResource("4_xg6l0")
move_speed = -7.0

[node name="House3" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(936, 366)
scale = Vector2(0.12, 0.12)
texture = ExtResource("3_emba5")
script = ExtResource("4_xg6l0")
move_speed = -2.0

[node name="Bump2" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(954, 408)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ht5qw")
script = ExtResource("4_xg6l0")
move_speed = -5.0

[node name="House4" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(766, 452)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_emba5")
script = ExtResource("4_xg6l0")
move_speed = -9.0

[node name="Cloud1" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(447, 154)
texture = ExtResource("3_be1xc")
script = ExtResource("4_xg6l0")
move_speed = -10.0

[node name="Cloud4" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(672, 111)
texture = ExtResource("3_be1xc")
script = ExtResource("4_xg6l0")
move_speed = -8.0

[node name="Cloud2" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(214, 85)
texture = ExtResource("5_8jl78")
script = ExtResource("4_xg6l0")
move_speed = -5.0

[node name="Cloud3" type="Sprite2D" parent="BackgroundLayer/Scrolling"]
position = Vector2(865, 59)
texture = ExtResource("5_8jl78")
script = ExtResource("4_xg6l0")
move_speed = -3.0

[node name="SxFxBetterBlur" type="Control" parent="BackgroundLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_bc8i0")
strength = 0.5

[node name="Ground" type="Sprite2D" parent="."]
position = Vector2(23616, 584)
texture = ExtResource("6_pvii6")
region_enabled = true
region_rect = Rect2(0, 0, 47232, 128)
script = ExtResource("7_vagn7")
repetitions = 40
initial_position = Vector2(0, 584)
metadata/_edit_lock_ = true

[node name="Motorcycle2" parent="." instance=ExtResource("3_ajmp3")]
position = Vector2(232, 448)

[node name="Client" parent="." instance=ExtResource("12_y4lmv")]
position = Vector2(-904, -864)

[node name="Package" parent="." instance=ExtResource("2_7qsdc")]
position = Vector2(144, 376)
food_type = 3
food_type_random = true

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="TouchInput" parent="HUDLayer" instance=ExtResource("12_b6jce")]
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="HUDLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="Minimap" parent="HUDLayer/MarginContainer" instance=ExtResource("17_wkok8")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
mouse_filter = 2

[node name="PackageLaunchMeters" type="RichTextLabel" parent="HUDLayer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("11_sk7p1")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]0m[/center]"
fit_content = true
metadata/_edit_lock_ = true

[node name="LevelInfo" type="RichTextLabel" parent="HUDLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("11_sk7p1")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Level {0}

1. {1}
2. {2}
3. {3}
[/center]"
fit_content = true

[node name="Time" type="Label" parent="HUDLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = SubResource("FontVariation_aqm42")
theme_override_font_sizes/font_size = 48
text = "\"00"
metadata/_edit_lock_ = true

[node name="Buttons" type="HBoxContainer" parent="HUDLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 16

[node name="ToggleMusic" type="Button" parent="HUDLayer/MarginContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
expand_icon = true
script = ExtResource("15_gd05k")
icon_name = "volume-high"
icon_size = 36

[node name="Reload" type="Button" parent="HUDLayer/MarginContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
expand_icon = true
script = ExtResource("15_gd05k")
icon_name = "repeat"
icon_size = 36

[node name="GoBack" type="Button" parent="HUDLayer/MarginContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
expand_icon = true
script = ExtResource("15_gd05k")
icon_name = "house"
icon_size = 36

[node name="Instructions" type="RichTextLabel" parent="HUDLayer/MarginContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("11_sk7p1")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Right Arrow or Tap screen right = [wave]Accelerate[/wave]
Left Arrow or Tap screen left = [shake]Brake[/shake]

Do not let the package fall on the sand.
[rainbow]Good luck![/rainbow]"
fit_content = true

[node name="Terrain" type="StaticBody2D" parent="." groups=["ground"]]
position = Vector2(0, 520)

[node name="TerrainBuilder" parent="." instance=ExtResource("12_whpfi")]
position = Vector2(0, 520)

[node name="BooSoundFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_1g77s")
volume_db = -10.0
